--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-flask==2.3.2
-Werkzeug==2.3.6
-Jinja2==3.1.2
-MarkupSafe==2.1.2
+flask==3.0.0
+Werkzeug==3.0.1
+Jinja2==3.1.3
+MarkupSafe==2.1.3
 itsdangerous==2.1.2
-click==8.1.3
+click==8.1.7
+python-dotenv==1.0.0
