--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-flask==3.0.0
-Werkzeug==3.0.1
-Jinja2==3.1.3
-MarkupSafe==2.1.3
-itsdangerous==2.1.2
-click==8.1.7
+streamlit==1.37.0
+pandas==2.2.0
 python-dotenv==1.0.0
